--- a/src/app/componentes/nav-bar/nav-bar.component.css
+++ b/src/app/componentes/nav-bar/nav-bar.component.css
@@ -1,63 +1,67 @@
-.nav-container{
-    margin: 5px 10px;
-    background: white;
-    border: 1px  rgb(20, 19, 18);
+.nav-container {
+  margin: 5px 10px;
+  background: white;
+  border: 1px rgb(20, 19, 18);
 }
 
-.navbar-main{
-    color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    padding: 15px 5px;    
+.navbar-main {
+  display: flex;
+  align-items: center;
+  height: 70px;
+  padding: 5px 5px;
 }
 
 /*--NAV BAR MENU RESPONSIVE--*/
-.navbar-menu{
-    display: block;
-    top: 0;
-    left: 0%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 0px 0px 10px 0px ;
-    opacity: 0.9;
-    transform: translate(-400px);
-    transition: transform .20s ease-in-out;
-    z-index: 2000;
+.navbar-menu {
+  display: block;
+  top: 0;
+  left: 0%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 0px 0px 10px 0px;
+  opacity: 0.9;
+  transform: translate(-400px);
+  transition: transform 0.2s ease-in-out;
+  z-index: 2000;
 }
 .navbar-menu-show {
-    transform: translate(0px);
+  transform: translate(0px);
 }
 
-ul{
-    display: block;
-    position: absolute;
-    list-style: none;
-    display: flex;
-    padding: 10px;
+ul {
+  display: block;
+  position: absolute;
+  list-style: none;
+  display: flex;
+  padding: 10px;
 }
-li{
-    padding: 20px 10px 20px 10px;
+li {
+  padding: 15px 10px;
 }
 
 /*--NAV BAR MENU--*/
-.iwamiIcon{
-    width: 150px;
-    height: 70px;
+.img-li {
+  width: 150px;
+  height: 80px;
+  padding: 0px 0px;
 }
-a{
-    color: black;
-    font-size: x-large;
-    text-decoration: none;
+.iwamiIcon {
+  top: 20px;
+  left: 0%;
+  width: 150px;
+  height: 80px;
 }
-a:hover{
-    color: rgb(221, 187, 74);
-    border-radius: 5px;
+a {
+  color: black;
+  font-size: x-large;
+  text-decoration: none;
 }
-
+a:hover {
+  color: rgb(221, 187, 74);
+  border-radius: 5px;
+}
 
 /*--NAV BAR MENU BTN CAR USER--*/
-.content-btn-cart-user{
+.content-btn-cart-user {
   position: absolute;
   display: flex;
   flex-direction: row;
@@ -65,110 +69,112 @@ a:hover{
   cursor: pointer;
   height: 50px;
   right: 20px;
-  gap: 10px
+  gap: 10px;
 }
 .account {
+  display: flex;
+}
+.navbar-menu-show-account {
   display: none;
 }
-.cart-content{
+.cart-content {
   opacity: 0.8;
 }
 
-.menu-btn{
+.menu-btn {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.menu-btn img{
+.menu-btn img {
   width: 38px;
   height: 8px;
   opacity: 0.8;
 }
 
-hr{
-    margin: 15PX 0;
-    height: 2PX;
-    color: rgb(0, 0, 0);
+hr {
+  margin: 15px 0;
+  height: 2px;
+  color: rgb(0, 0, 0);
 }
 
-@media screen and (min-width: 480px) and (max-width: 600px) {
+@media screen and (min-width: 550px) and (max-width: 739.99px) {
   .account {
     display: flex;
   }
-  .menu-btn{
+}
+
+@media screen and (min-width: 740px) and (max-width: 950.99px) {
+.menu-btn img {
     display: none;
+}
+.account {
+    display: none;
+}
+.navbar-main {
+    color: black;
+    display: flex;
+    align-items: center;
+    width: 640px;
+    height: 60px;
+    padding: 5px 5px;
+}
+.navbar-menu {
+    display: flex;
+    transform: translate(0px);
+    height: 70px;
+    padding: 5px 5px;
+}
+
+  .img-li {
+    width: 150px;
+    height: 70px;
+    padding: 0px 10px;
   }
-  navbar-menu{
-    flex: 1;
-    margin-left: 20px;
+  .iwamiIcon {
+    top: 0;
+    width: 140px;
+    height: 60px;
+  }
+  li {
+    padding: 10px;
+  }
 }
 
-a{
-    color: black;
-    font-size: x-large;
-    text-decoration: none;
+@media screen and (min-width: 950px){
+.menu-btn img {
+    display: none;
 }
-
-a:hover{
-    color: rgb(221, 187, 74);
-    border-radius: 5px;
-}
-
-ul{
-    list-style: none;
+.account {
     display: flex;
 }
-
-li{
-    padding: 20px;
-}
-
-
-hr{
-    margin: 15PX 0;
-    height: 2PX;
-    color: rgb(0, 0, 0);
-}
-}
-
-
-
-
-
-
-
-
-
-/*.navbar-menu{
-    flex: 1;
-    margin-left: 20px;
-}
-
-a{
+.navbar-main {
     color: black;
-    font-size: x-large;
-    text-decoration: none;
-}
-
-a:hover{
-    color: rgb(221, 187, 74);
-    border-radius: 5px;
-}
-
-ul{
-    list-style: none;
     display: flex;
+    align-items: center;
+    width: 640px;
+    height: 60px;
+    padding: 5px 5px;
+}
+.navbar-menu {
+    display: flex;
+    transform: translate(0px);
+    height: 70px;
+    padding: 5px 5px;
 }
 
-li{
-    padding: 20px;
+  .img-li {
+    width: 150px;
+    height: 70px;
+    padding: 0px 10px;
+  }
+  .iwamiIcon {
+    top: 0;
+    width: 140px;
+    height: 60px;
+  }
+  li {
+    padding: 10px;
+  }
 }
-
-
-hr{
-    margin: 15PX 0;
-    height: 2PX;
-    color: rgb(0, 0, 0);
-}
- */
 
