--- a/src/app/componentes/producto/producto.component.css
+++ b/src/app/componentes/producto/producto.component.css
@@ -172,7 +172,7 @@
         font-size: medium;
     }    
     .card-link{
-        font-size: medium;
+        font-size: small;
     }
     .discount{
         font-size: medium;
