--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -29,9 +29,9 @@ p{
 #name, #email, #password{
   width: 100%;
   margin: 0px 30px 0px 30px;
-  height: 35px;
+  height: 30px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #00000025;
 }
 #msj-error{
   width: 100%;
@@ -40,11 +40,31 @@ p{
   color: rgb(248, 0, 0);
   display: none;
 }
-.form-submit {
-  padding: 1px 5px;
-  margin: 15px 0px 0 30px;
+
+/**FORMULARIO DE REGISTRO**/
+.register-form{
+  width: 90%;
+  max-width: 300px;
+  border-radius: 5px;
+  border: #00000025 2px double; 
+ /*  background-color: rgb(255, 255, 255); */
+}
+.content-buttons{
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around; 
+  width: 80%;
+  margin: 20px auto;
+}
+.form-btn{
+  border-radius: 5px;
+  font-size: small;
+  padding: 2px 5px;
+  border: #07070765 1px double;
 }
 
+
+/***MODAL INICIO SESIÓN***/
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -58,34 +78,38 @@ p{
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   padding-top: 5px;
 }
-
 .modal-content {
   background-color: #fefefe;
   margin: 90px auto 0 auto;
   border: 1px solid #888;
   width: 80%;
+  max-width: 320px;
   height: 350px;
 }
 .modal-label{
   color: #000000;
   width: 100%;
-  margin: 5px 30px 5px 30px;
+  margin: 2px 30px;
 }
 #user-modal, #password-modal{
   width: 100%;
-  margin: 0px 30px 0 30px;
-  height: 35px;
+  margin: 0px 30px;
+  height: 30px;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
-.modal-submit-ingresar{
-  padding: 1px 5px;
-  margin: 15px 30px 0 30px;
+.content-buttons-modal{
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around; 
+  width: 80%;
+  margin: 20px auto;
 }
-.modal-submit-registrar{
-  padding: 1px 5px;
-  margin: 15px 0px 0px 20px;
-  right: 15px;
+.modal-btn{
+  border-radius: 5px;
+  font-size: small;
+  padding: 2px 5px;
+  border: #07070765 1px double;
 }
 
 .animate {
@@ -101,8 +125,8 @@ p{
 
 .close {
   position: absolute;
-  right: 25px;
-  top: 0;
+  right: 10px;
+  top: -35px;
   color: #000;
   font-size: 35px;
   font-weight: bold;
@@ -113,7 +137,8 @@ p{
   cursor: pointer;
 }
 img.avatar {
-  width: 20%;
+  width: 30%;
+  max-width: 100px;
   border-radius: 50%;
 }
 
