--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -33,14 +33,30 @@ p{
   border-radius: 5px;
   border: 1px solid #00000025;
 }
-#msj-error{
-  width: 100%;
-  margin: 0px 30px 0px 30px;
-  font-size: x-small;
-  color: rgb(248, 0, 0);
-  display: none;
+
+.ipnput-group{
+  display: flex;
+  flex-direction: column;
 }
 
+#msj-error{
+  width: 100%;
+  margin: 2px 10%;
+  font-size: x-small;
+  color: rgb(0, 0, 0);
+  display: none;
+}
+.msj-error{
+  width: 100%;
+  margin: 0px;
+  margin-left: 50px;
+  font-size: x-small;
+  color: rgb(248, 0, 0);
+  
+}
+.msj-error-none{
+  display: none;
+}
 /**FORMULARIO DE REGISTRO**/
 .register-form{
   width: 90%;
