--- a/src/app/componentes/contacto/contacto.component.css
+++ b/src/app/componentes/contacto/contacto.component.css
@@ -1,9 +1,63 @@
+.contacto-content{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    background-size: contain;
+}
+.contacto-content hr{
+    color: white;
+}
+.head img{
+    display: flex;
+    width: 80%;
+    height: 100px;
+    margin: auto;
+}
+.info-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.contacto-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 0px auto;
+    padding: 20px;
+}
+.iconos{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.iconos img{
+    display: inline-flex;
+    margin: 5px 10px;
+    width: 30px;
+    height: 30px;
+}
+.img-insta{
+    border-radius: 10%;
+    background-color: white;
+}
+.contacto-info-titulo{
+    font-size: large;
+    color: rgb(221, 187, 74);
+    margin: 2px;
+}
+.contacto-info-texto {
+    font-size: small;
+    color: white;
+    margin: 2px;
+}
 .contacto-form-content{
-    width: min-content;
+    width: 90%;
+    max-width: 270px;
     margin: 20px auto;
     padding: 10PX;
-    border: 1px solid;
     border-radius: 5px;
+    box-shadow: 1px 1px 1px .5px rgb(221, 187, 74);
 }
 .contacto-form{
     margin: 10px;
@@ -11,23 +65,153 @@
 }
 .input-group{
     display: inline;
-}
-.input-group label{
     
 }
+.input-group label{
+    width: 100%;
+    color: rgb(221, 187, 74);
+    font-size: small;
+}
 .input-group input{
-    border-radius: 5px;
+    border: none;
+    background: none;
+    border-bottom: 1px solid rgb(221, 187, 74);
+    opacity: 0.5;
+    width: 100%;
+    color: white;
+    margin-bottom: 5px;
+}
+.input-group input:focus{
+    border: none;
+    box-shadow: 2px 2px 2px 1px rgb(221, 187, 74);
+}
+#asunto{
+    border: none;
+    background: none;
+    color: white;
+    width: 100%;
+    opacity: 0.5;
+    height: 50px;
+    resize: none;
+    border-bottom: 1px solid rgb(221, 187, 74);
+}
+#asunto:focus{
+    border: none;
+    box-shadow: 2px 2px 2px 1px rgb(221, 187, 74);
+    
 }
 
-
-/* Es una regla CSS que se aplica a todos los elementos. */
 .form-submit {
     padding: 1px 5px;
+    color: rgb(221, 187, 74);
+    font-size: small;
+    border-radius: 5px;
+    box-shadow: .5px .5px .5px .1px rgb(221, 187, 74);
+    background: none;
 }
+
 .msj-error{
     display: none;
 }
 .content-btn{
     margin: 10px auto;
+    display: flex;
+    justify-content: center;
 }
 
+@media screen and (min-width: 281px) and (max-width: 440.99px) {
+    .head img{
+        width: 80%;
+        height: 140px;
+    }
+}
+
+@media screen and (min-width: 441px) and (max-width: 500.99px) {
+    .head img{
+        width: 90%;
+        height: 180px;
+    }
+}
+
+@media screen and (min-width: 501px) and (max-width: 550.99px) {
+    .head img{
+        width: 90%;
+        max-width: 500px;
+        height: 190px;
+        margin: 5px 20px;
+    }
+    
+}
+
+@media screen and (min-width: 551px) and (max-width: 780.99px) {
+    .contacto-content{
+        display: flex;
+        flex-direction: column;
+    }
+    .head img{
+        width: 90%;
+        max-width: 500px;
+        height: 210px;
+    }
+    .info-form{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (min-width: 781px) and (max-width: 1023.99px) {
+    .contacto-content{
+        display: flex;
+        flex-direction: column;
+    }
+    .head img{
+        max-width: 600px;
+        height: 240px;
+    }
+    .info-form{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    
+    }
+}
+@media screen and (min-width: 1024px) {
+    .contacto-content{
+        display: flex;
+        flex-direction: column;
+        background-image: url("../../../assets/imagenes/fondos/fondo-contacto.png");
+    }
+    .head img{
+        max-width: 700px;
+        height: 280px;
+    }
+    .info-form{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .contacto-form-content{
+        box-shadow: 1px 1px 1px .5px white
+    }
+    .input-group label{
+        color: rgb(255, 255, 255);
+    }
+    .input-group input{
+        border-bottom: 1px solid white;
+        color: white;
+    }
+    .input-group input:focus{
+        border: none;
+        box-shadow: 2px 2px 2px 1px white;
+    }
+    
+    #asunto{
+        border-bottom: 1px solid white;
+    }
+    #asunto:focus{
+        border: none;
+        box-shadow: 2px 2px 2px 1px white;
+        
+    }
+    .form-submit {
+        color: rgb(255, 255, 255);
+        box-shadow: .5px .5px .5px .1px white;
+    }
+}
