--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -2,8 +2,7 @@
   width: 90%;
   margin: auto;
   padding: 20px 0;
-  background-image: url("../../../assets/imagenes/icons/fondo2.webp");
-/*   background-color: rgb(87, 72, 55); */
+  background-image: url("../../../assets/imagenes/fondos/fondo2.webp");
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,11 +23,11 @@ p{
 .form-label{
   color: #fefefe;
   width: 100%;
-  margin: 5px 30px 5px 30px;
+  margin: 5px 20px;
 }
 #name, #email, #password{
   width: 100%;
-  margin: 0px 30px 0px 30px;
+  margin: 0px 20px;
   height: 30px;
   border-radius: 5px;
   border: 1px solid #00000025;
@@ -39,17 +38,9 @@ p{
   flex-direction: column;
 }
 
-#msj-error{
-  width: 100%;
-  margin: 2px 10%;
-  font-size: x-small;
-  color: rgb(0, 0, 0);
-  display: none;
-}
 .msj-error{
   width: 100%;
-  margin: 0px;
-  margin-left: 50px;
+  margin: 0px 20px !important;
   font-size: x-small;
   color: rgb(248, 0, 0);
   
@@ -69,12 +60,12 @@ p{
   display: flex;
   flex-direction: row; 
   justify-content: space-around; 
-  width: 80%;
+  width: 90%;
   margin: 20px auto;
 }
 .form-btn{
   border-radius: 5px;
-  font-size: small;
+  font-size: x-small;
   padding: 2px 5px;
   border: #07070765 1px double;
 }
