--- a/src/app/componentes/nav-bar/nav-bar.component.css
+++ b/src/app/componentes/nav-bar/nav-bar.component.css
@@ -7,7 +7,7 @@
 .navbar-main {
   display: flex;
   align-items: center;
-  height: 70px;
+  height: 60px;
   padding: 5px 5px;
 }
 
@@ -72,6 +72,7 @@ a:hover {
   gap: 10px;
 }
 .account {
+  font-size: x-small;
   display: flex;
 }
 .navbar-menu-show-account {
@@ -96,6 +97,13 @@ hr {
   margin: 15px 0;
   height: 2px;
   color: rgb(0, 0, 0);
+}
+
+@media screen and (min-width: 281px) and (max-width: 440.99px) {
+  .account {
+    font-size: small;
+    display: flex;
+  }  
 }
 
 @media screen and (min-width: 550px) and (max-width: 739.99px) {
